--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="ecommerceapp">ECommerceApp</string>
+    <string name="forgot_password">Forgot Password</string>
+    <string name="enter_your_email_or_phone_number">Enter your email</string>
+    <string name="send_code">send code</string>
+    <string name="default_web_client_id">374401454386-c2jkovtn7d0qrg7t74vprojvnj4teekb.apps.googleusercontent.com</string>
 </resources>
